--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,17 @@
 <!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+
+<html>
+	<head>
+		<title>First</title>
+		
+		<link rel="stylesheet" type="text/css" href="style.css" />
+	</head>
+	
+	<body>
+		<header></header>
+		<aside id="left"></aside>
+		<aside id="right"></aside>
+		<footer></footer>
+	</body>
+</html>
