A little further, a little closer

--- a/first/index.html
+++ b/first/index.html
@@ -5,13 +5,13 @@
 	<head>
 		<title>First</title>
 		
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	
 	<body>
-		<header></header>
-		<aside id="left"></aside>
-		<aside id="right"></aside>
-		<footer></footer>
+		<div id="header"></div>
+		<div id="footer"></div>
+		<div id="left"></div>
+		<div id="right"></div>
 	</body>
 </html>
