--- a/first/index.html
+++ b/first/index.html
@@ -9,9 +9,11 @@
 	</head>
 	
 	<body>
-		<div id="header"></div>
-		<div id="footer"></div>
-		<div id="left"></div>
-		<div id="right"></div>
+		<div>
+			<div id="header"></div>
+			<div id="left"></div>
+			<div id="right"></div>
+			<div id="footer"></div>
+		</div>
 	</body>
 </html>
