--- a/second/index.html
+++ b/second/index.html
@@ -10,8 +10,9 @@
 	<body>
 		<article>
 			<aside id="left"></aside>
-			<aside id="right"></aside>
-			<div id="img-placeholder"></div>
+			<aside id="right">
+				<div id="img-placeholder"></div>
+			</aside>
 		</article>
 	</body>
 </html>
